# corporate-rag-mvp

./: .env.example  .gitignore  MVP_PLAN_RU.md  README.md  pyproject.toml  start_app.cmd  status_app.cmd  stop_app.cmd
.github/workflows/: tests.yml
deploy/: supervisord.conf
sample_docs/: dogovor_romashka.docx
scripts/: bootstrap_wsl_app.sh  check_stack.py  evaluate_reference_questions.py  reindex.py  run_api.py  run_bot.py  run_embedder.py  start_stack.sh  status_stack.sh  stop_stack.sh  verify_wsl_stack.sh
src/app/: __init__.py  config.py  logging_config.py  main.py  schemas.py
src/app/api/: __init__.py  admin.py  query.py
src/app/bot/: __init__.py  handlers.py  polling.py
src/app/db/: models.py  repositories.py  session.py
src/app/db/migrations/: 001_initial.sql
src/app/ingest/: __init__.py  chunking.py  importer.py  metadata_extraction.py
src/app/ingest/parsers/: __init__.py  docx_parser.py  pdf_parser.py
src/app/providers/: __init__.py  embedding_client.py  interfaces.py  openai_generator.py
src/app/retrieval/: __init__.py  hybrid_search.py  query_parser.py  rerank.py
src/app/services/: admin_service.py  answer_formatter.py  query_service.py  runtime.py
src/embedder/: __init__.py  model_loader.py  schemas.py  service.py
tests/: test_admin_service.py  test_answer_formatter.py  test_chunking.py  test_hybrid_search.py  test_importer.py  test_metadata_extraction.py  test_query_parser.py  test_query_service.py
tests/fixtures/: reference_questions_ru.json
