[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "corporate-rag-mvp"
version = "0.1.0"
description = "Локальный RAG для корпоративных документов с FastAPI, PostgreSQL/pgvector и Telegram-ботом."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiogram>=3.20,<4.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "openai>=1.100,<2.0",
  "pgvector>=0.4,<1.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "PyMuPDF>=1.26,<2.0",
  "python-docx>=1.2,<2.0",
  "python-dotenv>=1.1,<2.0",
  "SQLAlchemy>=2.0.40,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
embedder = [
  "accelerate>=1.10,<2.0",
  "bitsandbytes>=0.48,<1.0",
  "einops>=0.8,<1.0",
  "huggingface_hub>=0.34,<1.0",
  "sentencepiece>=0.2,<1.0",
  "sentence-transformers>=5.1,<6.0",
  "torch>=2.5,<3.0",
  "transformers>=4.51,<5.0",
]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0",
  "ruff>=0.12,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/embedder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
